crates/parser/src/snapshots/parser__tests__parse_let_statement.snap
---
source: crates/parser/src/lib.rs
expression: "&parse.debug_tree()"
---
Root@0..12
  LetStatement@0..11
    Let@0..3 "let"
    Whitespace@3..4 " "
    Identifier@4..5 "x"
    Whitespace@5..6 " "
    Equals@6..7 "="
    Whitespace@7..8 " "
    Number@8..11
      Number@8..11 "100"
  Semicolon@11..12 ";"
