crates/parser/src/snapshots/parser__tests__parse_negation.snap
---
source: crates/parser/src/lib.rs
expression: "&parse.debug_tree()"
---
Root@0..3
  PrefixExpression@0..3
    Minus@0..1 "-"
    Number@1..3
      Number@1..3 "10"
