crates/parser/src/snapshots/parser__tests__parse_nested_object_literal.snap
---
source: crates/parser/src/lib.rs
expression: "&parse.debug_tree()"
info:
  code: "\n      new {\n        x: 1,\n        y: \"yes\",\n        z: f(x) = x + 1,\n        a: new {\n          b: [2],\n          c: \"no\",\n        }\n      }\n    "
---
Root@0..146
  Whitespace@0..7 "\n      "
  ObjectExpression@7..146
    New@7..10 "new"
    Whitespace@10..11 " "
    LeftBrace@11..12 "{"
    Whitespace@12..21 "\n        "
    ObjectField@21..25
      ObjectFieldKey@21..22
        Identifier@21..22 "x"
      Colon@22..23 ":"
      Whitespace@23..24 " "
      ObjectFieldValue@24..25
        Number@24..25
          Number@24..25 "1"
    Comma@25..26 ","
    Whitespace@26..35 "\n        "
    ObjectField@35..43
      ObjectFieldKey@35..36
        Identifier@35..36 "y"
      Colon@36..37 ":"
      Whitespace@37..38 " "
      ObjectFieldValue@38..43
        String@38..43
          String@38..43 "\"yes\""
    Comma@43..44 ","
    Whitespace@44..53 "\n        "
    ObjectField@53..68
      ObjectFieldKey@53..54
        Identifier@53..54 "z"
      Colon@54..55 ":"
      Whitespace@55..56 " "
      ObjectFieldValue@56..68
        AnonymousFunctionExpression@56..68
          Function@56..57 "f"
          ArgumentList@57..61
            LeftParenthesis@57..58 "("
            VariableReference@58..59
              Identifier@58..59 "x"
            RightParenthesis@59..60 ")"
            Whitespace@60..61 " "
          Equals@61..62 "="
          Whitespace@62..63 " "
          InfixExpression@63..68
            VariableReference@63..65
              Identifier@63..64 "x"
              Whitespace@64..65 " "
            Plus@65..66 "+"
            Whitespace@66..67 " "
            Number@67..68
              Number@67..68 "1"
    Comma@68..69 ","
    Whitespace@69..78 "\n        "
    ObjectField@78..140
      ObjectFieldKey@78..79
        Identifier@78..79 "a"
      Colon@79..80 ":"
      Whitespace@80..81 " "
      ObjectFieldValue@81..140
        ObjectExpression@81..140
          New@81..84 "new"
          Whitespace@84..85 " "
          LeftBrace@85..86 "{"
          Whitespace@86..97 "\n          "
          ObjectField@97..103
            ObjectFieldKey@97..98
              Identifier@97..98 "b"
            Colon@98..99 ":"
            Whitespace@99..100 " "
            ObjectFieldValue@100..103
              ArrayExpression@100..103
                LeftBracket@100..101 "["
                Number@101..102
                  Number@101..102 "2"
                RightBracket@102..103 "]"
          Comma@103..104 ","
          Whitespace@104..115 "\n          "
          ObjectField@115..122
            ObjectFieldKey@115..116
              Identifier@115..116 "c"
            Colon@116..117 ":"
            Whitespace@117..118 " "
            ObjectFieldValue@118..122
              String@118..122
                String@118..122 "\"no\""
          Comma@122..123 ","
          Whitespace@123..132 "\n        "
          RightBrace@132..133 "}"
          Whitespace@133..140 "\n      "
    RightBrace@140..141 "}"
    Whitespace@141..146 "\n    "
