crates/parser/src/snapshots/parser__tests__parse_nested_patterns.snap
---
source: crates/parser/src/lib.rs
expression: "&parse.debug_tree()"
info:
  code: "let [{ x, }, z] = weel;"
---
Root@0..23
  LetStatement@0..22
    Let@0..3 "let"
    Whitespace@3..4 " "
    ArrayPattern@4..16
      LeftBracket@4..5 "["
      StructPattern@5..11
        LeftBrace@5..6 "{"
        Whitespace@6..7 " "
        Identifier@7..8 "x"
        Comma@8..9 ","
        Whitespace@9..10 " "
        RightBrace@10..11 "}"
      Comma@11..12 ","
      Whitespace@12..13 " "
      Identifier@13..14 "z"
      RightBracket@14..15 "]"
      Whitespace@15..16 " "
    Equals@16..17 "="
    Whitespace@17..18 " "
    VariableReference@18..22
      Identifier@18..22 "weel"
  Semicolon@22..23 ";"
