crates/parser/src/snapshots/parser__tests__parse_new_struct_literal_empty.snap
---
source: crates/parser/src/lib.rs
expression: "&parse.debug_tree()"
info:
  code: "let x = new Foo { };"
---
Root@0..20
  LetStatement@0..19
    Let@0..3 "let"
    Whitespace@3..4 " "
    Identifier@4..5 "x"
    Whitespace@5..6 " "
    Equals@6..7 "="
    Whitespace@7..8 " "
    StructLiteralExpression@8..19
      New@8..11 "new"
      Whitespace@11..12 " "
      VariableReference@12..16
        Identifier@12..15 "Foo"
        Whitespace@15..16 " "
      LeftBrace@16..17 "{"
      Whitespace@17..18 " "
      RightBrace@18..19 "}"
  Semicolon@19..20 ";"
