crates/parser/src/snapshots/parser__tests__parse_number.snap
---
source: crates/parser/src/lib.rs
expression: "&parse.debug_tree()"
info:
  code: "123"
---
Root@0..3
  Number@0..3
    Number@0..3 "123"
