crates/parser/src/snapshots/parser__tests__parse_number_followed_by_whitespace.snap
---
source: crates/parser/src/lib.rs
expression: "&parse.debug_tree()"
info:
  code: "999   "
---
Root@0..6
  Number@0..6
    Number@0..3 "999"
    Whitespace@3..6 "   "
