crates/parser/src/snapshots/parser__tests__parse_number_preceded_by_whitespace.snap
---
source: crates/parser/src/lib.rs
expression: "&parse.debug_tree()"
---
Root@0..7
  Whitespace@0..3 "   "
  Number@3..7
    Number@3..7 "9876"
