crates/parser/src/snapshots/parser__tests__parse_number_surrounded_by_whitespace.snap
---
source: crates/parser/src/lib.rs
expression: "&parse.debug_tree()"
info:
  code: " 123     "
---
Root@0..9
  Whitespace@0..1 " "
  Number@1..9
    Number@1..4 "123"
    Whitespace@4..9 "     "
