crates/parser/src/snapshots/parser__tests__parse_object_field_accessor_on_function_call_expression.snap
---
source: crates/parser/src/lib.rs
expression: "&parse.debug_tree()"
info:
  code: "hello(\"world\").to_uppercase()"
---
Root@0..29
  FunctionCallExpression@0..29
    ObjectFieldAccessExpression@0..27
      FunctionCallExpression@0..14
        VariableReference@0..5
          Identifier@0..5 "hello"
        ArgumentList@5..14
          LeftParenthesis@5..6 "("
          String@6..13
            String@6..13 "\"world\""
          RightParenthesis@13..14 ")"
      Period@14..15 "."
      ObjectFieldKey@15..27
        Identifier@15..27 "to_uppercase"
    ArgumentList@27..29
      LeftParenthesis@27..28 "("
      RightParenthesis@28..29 ")"
