crates/parser/src/snapshots/parser__tests__parse_object_literal.snap
---
source: crates/parser/src/lib.rs
expression: "&parse.debug_tree()"
info:
  code: "\n      new {\n        x: 1,\n        y: \"yes\",\n        z: f(x) = x + 1,\n      }\n    "
---
Root@0..82
  Whitespace@0..7 "\n      "
  ObjectExpression@7..82
    New@7..10 "new"
    Whitespace@10..11 " "
    LeftBrace@11..12 "{"
    Whitespace@12..21 "\n        "
    ObjectField@21..25
      ObjectFieldKey@21..22
        Identifier@21..22 "x"
      Colon@22..23 ":"
      Whitespace@23..24 " "
      ObjectFieldValue@24..25
        Number@24..25
          Number@24..25 "1"
    Comma@25..26 ","
    Whitespace@26..35 "\n        "
    ObjectField@35..43
      ObjectFieldKey@35..36
        Identifier@35..36 "y"
      Colon@36..37 ":"
      Whitespace@37..38 " "
      ObjectFieldValue@38..43
        String@38..43
          String@38..43 "\"yes\""
    Comma@43..44 ","
    Whitespace@44..53 "\n        "
    ObjectField@53..68
      ObjectFieldKey@53..54
        Identifier@53..54 "z"
      Colon@54..55 ":"
      Whitespace@55..56 " "
      ObjectFieldValue@56..68
        AnonymousFunctionExpression@56..68
          Function@56..57 "f"
          ArgumentList@57..61
            LeftParenthesis@57..58 "("
            VariableReference@58..59
              Identifier@58..59 "x"
            RightParenthesis@59..60 ")"
            Whitespace@60..61 " "
          Equals@61..62 "="
          Whitespace@62..63 " "
          InfixExpression@63..68
            VariableReference@63..65
              Identifier@63..64 "x"
              Whitespace@64..65 " "
            Plus@65..66 "+"
            Whitespace@66..67 " "
            Number@67..68
              Number@67..68 "1"
    Comma@68..69 ","
    Whitespace@69..76 "\n      "
    RightBrace@76..77 "}"
    Whitespace@77..82 "\n    "
